# Cupcake

./: .gitignore  CMakeLists.txt  README.md  app.py  build.py  cleanbuild.sh  file_writer.cpp  llm_talker.cpp  logclean.sh  main.cpp  resclean.sh  run.sh  setup.py  test_exe  testfile.cpp  testfile.txt
bin_test/: testrun_1
bins/: main_darwin  main_linux
codex_res/: model_output.json  readme.rtf
conf/: conf_dependencies_x  conf_dependencies_x.cpp
core/: cli_interface.hpp  file_parser.cpp  file_parser.hpp  llm_talker.cpp  llm_talker.hpp
doc/: compile.txt  shell_scripts.rtf  todo.rtf
error_logs/: readme.rtf
file_io/: compile.txt  file_writer.cpp  file_writer.hpp
file_parser/: compile.txt
gui/: file_loader.py  main_window.py
llm_interface/: qwen_runner.py  review_task.py
parsed_files/: readme.rtf  response.txt
